Tried to fix the bubble alignment issue, failed
Still not able to get the bubbles to render correctly. Seems like they are having issues while streaming and not rendering right. #4

--- a/client/src/routes/chatPage/chatPage.css
+++ b/client/src/routes/chatPage/chatPage.css
@@ -29,7 +29,7 @@
     margin: 10px 0px;
   }
 
-  .message {
+  /* .message {
     padding: 20px;
     margin-bottom: 20px;
 
@@ -39,6 +39,27 @@
       max-width: 80%;
       align-self: flex-end;
     }
+  } */
+  /* Common styles for both user and bot messages */
+  .message {
+    padding: 20px;
+    margin-bottom: 20px;
+    max-width: 80%;
+    border-radius: 20px;
+    /* display: flex; */
+  }
+
+  /* Bot messages should align to the left */
+  .message.bot {
+    align-self: flex-start;
+    justify-content: flex-start;
+  }
+
+  /* User messages should align to the right */
+  .message.user {
+    background-color: #2c2937;
+    align-self: flex-end;
+    justify-content: flex-end;
   }
 }
 
